5 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
 
 <ng-template cxOutletRef="SearchBox" cxOutletPos="after">
   <div class="scan-button">
-    <i class="btn btn-secondary btn-block fas fa-barcode" type="button" (click)="setupCameraSettings()">
-    <!--<mat-icon>favorite</mat-icon>-->
-    SCAN
-    </i>
+   <button mat-fab aria-label="Button to initiate Scandit scanner" (click)="setupCameraSettings()">
+      <mat-icon class="icon-display" svgIcon="barcodeicon"></mat-icon>
+    </button>
   </div>
+  <div [hidden]="isShowDiv">
     <scandit-sdk-barcode-picker #picker [accessCamera]="cameraAccess"
                             [camera]="activeCamera"
                             [cameraSettings]="cameraSettings"
@@ -22,11 +22,11 @@
                             [vibrateOnScan]="enableVibrateOnScan"
                             [videoFit]="videoFit"
                             [visible]="visible"
-                            [style.height]="height || '15vw'"
-                            [style.width]="width || '25vw'"
+                            [style.height]="height || '55vw'"
+                            [style.width]="width || '100vw'"
                             (scan)="onScan($event)"
                             (init)="isReady = false" (ready)="isReady = true"></scandit-sdk-barcode-picker>
-
+   </div>
 <ng-template>
 
 <!--
@@ -45,7 +45,7 @@
   {{model | json}}
 </ng-template>
 -->
-
+<!--
 Ready: {{isReady}}
 <div style="justify-content: space-between; align-items: flex-start;">
   <ul>
