--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,10 +5,23 @@ p {
 .scan-button {
   background-color: #ffffff00; /* Transparent */
   border: none;
-  color: white;
-  padding: 12px 20px;
+  color: rgb(255, 255, 255);
+  padding: 8px 8px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
+  font-size: 8px;
 }
+
+
+.mat-fab.mat-accent {
+  background-color: #747881;
+}
+
+.icon-display {
+  transform: scale(1.5);
+  font-size: 8px;
+  line-height: 1rem
+
+ }
+
